# LogSpike

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  clippy.toml  rustfmt.toml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: .gitkeep  icon.icns
crates/app/src/: commands.rs  lib.rs  main.rs  state.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  index.rs  lib.rs  parser.rs  search.rs  tail.rs
example/: Git_Log.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: FilterBar.svelte  OverviewRuler.svelte  Sidebar.svelte  StatusBar.svelte  Toolbar.svelte  ViewPane.svelte  VirtualLogList.svelte  api.ts  lineCache.ts  themes.css  types.ts
