[package]
name        = "logspike-core"
description = "Mmap-based log indexer, search engine, and live-tail primitives."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lib]
name = "logspike_core"
path = "src/lib.rs"

[dependencies]
anyhow            = { workspace = true }
thiserror         = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
memmap2           = { workspace = true }
memchr            = { workspace = true }
regex             = { workspace = true }
aho-corasick      = { workspace = true }
notify            = { workspace = true }
parking_lot       = { workspace = true }
crossbeam-channel = { workspace = true }
rayon             = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
tempfile = "3"
